{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 39,
  "lineage": "999565f9-ace3-4415-ff47-f8a99025107b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "EC2_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05548f9cecf47b442",
            "arn": "arn:aws:ec2:us-east-1:508812150260:instance/i-0c9a952f0420a7d0c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9a952f0420a7d0c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02298ef5ece7b3ce1",
            "private_dns": "ip-172-31-33-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.253",
            "public_dns": "ec2-34-207-216-178.compute-1.amazonaws.com",
            "public_ip": "34.207.216.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d32f7034c17c955b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a2dd152003cf658",
            "tags": {
              "Name": "EC2 Demo 2 us-east-1a"
            },
            "tags_all": {
              "Name": "EC2 Demo 2 us-east-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0057300e43ba18d4a",
              "sg-0f9630ca59a6480c2"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.Linux_images",
            "data.aws_availability_zones.my_zones"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05548f9cecf47b442",
            "arn": "arn:aws:ec2:us-east-1:508812150260:instance/i-06642e468669dcd12",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06642e468669dcd12",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033560397426fc568",
            "private_dns": "ip-172-31-4-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.4.185",
            "public_dns": "ec2-44-200-115-47.compute-1.amazonaws.com",
            "public_ip": "44.200.115.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01980478231970aec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ac63224509cd578",
            "tags": {
              "Name": "EC2 Demo 2 us-east-1b"
            },
            "tags_all": {
              "Name": "EC2 Demo 2 us-east-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0057300e43ba18d4a",
              "sg-0f9630ca59a6480c2"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.Linux_images",
            "data.aws_availability_zones.my_zones"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05548f9cecf47b442",
            "arn": "arn:aws:ec2:us-east-1:508812150260:instance/i-03c0621353e8b5020",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c0621353e8b5020",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c689a8825be9076",
            "private_dns": "ip-172-31-83-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.83.157",
            "public_dns": "ec2-44-212-54-152.compute-1.amazonaws.com",
            "public_ip": "44.212.54.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0690c529f779107ff",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a7027a815f4bf3a",
            "tags": {
              "Name": "EC2 Demo 2 us-east-1c"
            },
            "tags_all": {
              "Name": "EC2 Demo 2 us-east-1c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0057300e43ba18d4a",
              "sg-0f9630ca59a6480c2"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.Linux_images",
            "data.aws_availability_zones.my_zones"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05548f9cecf47b442",
            "arn": "arn:aws:ec2:us-east-1:508812150260:instance/i-031599505a2db5ce3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031599505a2db5ce3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae6f5cbc5c0766c6",
            "private_dns": "ip-172-31-24-0.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.0",
            "public_dns": "ec2-54-210-183-62.compute-1.amazonaws.com",
            "public_ip": "54.210.183.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a1536e466b8304e3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e0d83d4461bcc63",
            "tags": {
              "Name": "EC2 Demo 2 us-east-1d"
            },
            "tags_all": {
              "Name": "EC2 Demo 2 us-east-1d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0057300e43ba18d4a",
              "sg-0f9630ca59a6480c2"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.Linux_images",
            "data.aws_availability_zones.my_zones"
          ]
        },
        {
          "index_key": "us-east-1e",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05548f9cecf47b442",
            "arn": "arn:aws:ec2:us-east-1:508812150260:instance/i-08014988413f24416",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08014988413f24416",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec73443f416cd80c",
            "private_dns": "ip-172-31-63-105.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.63.105",
            "public_dns": "ec2-54-145-155-143.compute-1.amazonaws.com",
            "public_ip": "54.145.155.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-086bc6f9759782bc5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0891e9e80a0b8a6c5",
            "tags": {
              "Name": "EC2 Demo 2 us-east-1e"
            },
            "tags_all": {
              "Name": "EC2 Demo 2 us-east-1e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0057300e43ba18d4a",
              "sg-0f9630ca59a6480c2"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.Linux_images",
            "data.aws_availability_zones.my_zones"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05548f9cecf47b442",
            "arn": "arn:aws:ec2:us-east-1:508812150260:instance/i-012cf60cc72a77bc2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012cf60cc72a77bc2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f2359cbfa9ff460",
            "private_dns": "ip-172-31-67-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.67.56",
            "public_dns": "ec2-34-239-149-142.compute-1.amazonaws.com",
            "public_ip": "34.239.149.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fcbd0ae0470d3c4d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07687f2bcc48051d2",
            "tags": {
              "Name": "EC2 Demo 2 us-east-1f"
            },
            "tags_all": {
              "Name": "EC2 Demo 2 us-east-1f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0057300e43ba18d4a",
              "sg-0f9630ca59a6480c2"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.Linux_images",
            "data.aws_availability_zones.my_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508812150260:security-group/sg-0057300e43ba18d4a",
            "description": "Dev VPC SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0057300e43ba18d4a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "508812150260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-ssh"
            },
            "tags_all": {
              "Name": "vpc-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-00461661d57244e71"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508812150260:security-group/sg-0f9630ca59a6480c2",
            "description": "Dev VPC Web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all ip and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9630ca59a6480c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web",
            "name_prefix": "",
            "owner_id": "508812150260",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-web"
            },
            "tags_all": {
              "Name": "vpc-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-00461661d57244e71"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}